Added Category Cards, Added Gallery Menu Dropdown, Added Gallery Previews, Uploaded big images to cloudinary

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,8 @@ dist-ssr
 
 src/assets/Others
 src/assets/Raw
+src/assets/Wedding 1
+src/assets/Wedding 2
+src/assets/cover
+src/assets/gallery-preview
+src/assets/preview
