--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "bootstrap": "^5.2.3",
     "react": "^18.2.0",
+    "react-animation-on-scroll": "^5.1.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
     "react-router": "^6.8.1",
